[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.FeeWaiver"
version = "1.2.2"
description = "A docassemble extension."
readme = "README.md"
dependencies = []
license = "MIT"
license-files = [
    "LICENSE",
]

[[project.authors]]
name = "Quinten Steenhuis / Matt Newsted"
email = "qsteenhuis@suffolk.edu mnewsted@illinoislegalaid.org"

[project.urls]
Homepage = "https://www.illinoislegalaid.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
