[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.FeeWaiver"
version = "1.2.3"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Quinten Steenhuis / Matt Newsted", email = "mnewsted@illinoislegalaid.org" },
]
dependencies = []
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://www.illinoislegalaid.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
